--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "eslint": "^9.20.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
